fixes scrollbar in table

--- a/public/assets/css/_utilities.scss
+++ b/public/assets/css/_utilities.scss
@@ -132,6 +132,27 @@
   background: linear-gradient(to right, $color4, $color106);
 }
 
+.vertical-scrollbar {
+  &::-webkit-scrollbar {
+    height: 2px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+}
+
 body {
   background-color: $color101;
 }
